# refive-backend-challenge

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  refive.postman_collection.json
refive/: asgi.py  settings.py  urls.py  wsgi.py
refive/custom_auth/: apps.py  tests.py
refive/custom_auth/api/: urls.py  views.py
refive/receipt/: admin.py  apps.py  models.py  services.py  tests.py
refive/receipt/api/: serializers.py  urls.py  views.py
refive/receipt/migrations/: 0001_initial.py
