[tool.poetry]
name = "refive"
version = "0.1.0"
description = ""
authors = ["Mobasshir Bhuiya"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-cors-headers = "3.11.0"
boto3 = "^1.21.11"
tqdm = "^4.63.0"
PyMuPDF = "^1.19.5"
django-filter = "^21.1"
python-dotenv = "^0.19.2"
Pillow = "^9.0.0"
gunicorn = {version = "^20.1.0", optional = true}
uvicorn = {version = "^0.17.0", optional = true}
django-storages = {extras = ["boto3"], version = "^1.12.3", optional = true}
psycopg2-binary = "^2.9.3"
celery = "^5.2.7"
redis = "^4.3.4"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.4.0"
requests = "^2.28.1"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
